# skeleton

./: .gitignore  Makefile  cabal.project  default.nix  project.nix  shell.nix
skeleton/: skeleton.cabal
skeleton/src/Skeleton/: Main.hs
